# gst-plugins-demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  gstevtest.c  gstevtest.h  gsttestsrc.c  gsttestsrc.h  plugin.c
